[gd_scene load_steps=30 format=2]

[ext_resource path="res://scene/Button/Down_Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Box.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/FinalState.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/Button/Up_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/Button/Right_Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/Button/Left_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://script/stage/Stage5.gd" type="Script" id=8]
[ext_resource path="res://scene/key.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/Background.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/Wood board.png" type="Texture" id=11]
[ext_resource path="res://assets/Icon/reload.png" type="Texture" id=12]
[ext_resource path="res://assets/UI_Flat_Banner_02_Upward.png" type="Texture" id=13]
[ext_resource path="res://assets/Icon/forward.png" type="Texture" id=14]
[ext_resource path="res://assets/b1_black.png" type="Texture" id=15]
[ext_resource path="res://assets/Icon/home.png" type="Texture" id=16]
[ext_resource path="res://assets/b1.png" type="Texture" id=17]
[ext_resource path="res://assets/Icon/play.png" type="Texture" id=18]
[ext_resource path="res://assets/button-click.mp3" type="AudioStream" id=19]
[ext_resource path="res://scene/DFA/DFA5.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/Key.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/Interface.png" type="Texture" id=22]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1), 
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 5 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1), 
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 6 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[sub_resource type="Theme" id=10]

[sub_resource type="DynamicFontData" id=12]
antialiased = false
font_path = "res://assets/Daydream.ttf"

[sub_resource type="DynamicFont" id=11]
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 12 )

[node name="Stage" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" parent="." instance=ExtResource( 10 )]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Interface" type="Sprite" parent="."]
position = Vector2( 212, 289 )
scale = Vector2( 6.85192, 6.27155 )
texture = ExtResource( 22 )

[node name="Box_stage" type="Node2D" parent="."]

[node name="Box" parent="Box_stage" instance=ExtResource( 2 )]
position = Vector2( 562, 207 )

[node name="Box2" parent="Box_stage" instance=ExtResource( 2 )]
position = Vector2( 644, 206 )

[node name="Box3" parent="Box_stage" instance=ExtResource( 2 )]
position = Vector2( 726, 205 )

[node name="Box4" parent="Box_stage" instance=ExtResource( 2 )]
position = Vector2( 563, 292 )

[node name="Box5" parent="Box_stage" instance=ExtResource( 2 )]
position = Vector2( 644, 292 )

[node name="Box6" parent="Box_stage" instance=ExtResource( 2 )]
position = Vector2( 726, 292 )

[node name="Box7" parent="Box_stage" instance=ExtResource( 2 )]
position = Vector2( 644, 371 )

[node name="Box" type="Node2D" parent="."]

[node name="Key" parent="." instance=ExtResource( 9 )]
position = Vector2( 727, 206 )
scale = Vector2( 2, 2 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 489, 205 )

[node name="Final" parent="." instance=ExtResource( 3 )]
position = Vector2( 560, 364 )

[node name="origin_box" type="Node2D" parent="."]
material = SubResource( 7 )
position = Vector2( 528, 550 )
scale = Vector2( 3.7, 3.7 )

[node name="WoodBoard" type="Sprite" parent="origin_box"]
material = SubResource( 8 )
position = Vector2( -0.810822, -3.8147e-06 )
scale = Vector2( 0.975676, 0.975676 )
texture = ExtResource( 11 )

[node name="Up_button" parent="origin_box" instance=ExtResource( 5 )]
position = Vector2( -35.9459, -0.270279 )
scale = Vector2( 0.27027, 0.27027 )

[node name="Right_Button" parent="origin_box" instance=ExtResource( 6 )]
position = Vector2( -12.4324, -1.52588e-05 )
scale = Vector2( 0.27027, 0.27027 )

[node name="Left_button" parent="origin_box" instance=ExtResource( 7 )]
position = Vector2( 34.5946, 3.05176e-05 )
scale = Vector2( 0.27027, 0.27027 )

[node name="Down_button" parent="origin_box" instance=ExtResource( 1 )]
position = Vector2( 10.8108, 3.05176e-05 )
scale = Vector2( 0.27027, 0.27027 )

[node name="Control" type="Control" parent="."]
margin_left = -1.0
margin_right = 39.0
margin_bottom = 40.0

[node name="Home" type="TextureButton" parent="Control"]
margin_left = 811.0
margin_top = 40.0
margin_right = 1002.0
margin_bottom = 96.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true

[node name="Home" type="Sprite" parent="Control/Home"]
position = Vector2( 30, 33 )
scale = Vector2( 0.050293, 0.050293 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="Control/Home"]
margin_left = 78.0
margin_top = 22.0
margin_right = 182.0
margin_bottom = 79.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "HOME
"

[node name="Run" type="TextureButton" parent="Control"]
margin_left = 808.0
margin_top = 440.0
margin_right = 999.0
margin_bottom = 496.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true

[node name="Home" type="Sprite" parent="Control/Run"]
position = Vector2( 30, 33 )
scale = Vector2( 0.050293, 0.050293 )
texture = ExtResource( 18 )

[node name="Label" type="Label" parent="Control/Run"]
margin_left = 78.0
margin_top = 22.0
margin_right = 182.0
margin_bottom = 79.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "RUN"

[node name="retry" type="TextureButton" parent="Control"]
margin_left = 811.0
margin_top = 104.0
margin_right = 1002.0
margin_bottom = 160.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true

[node name="Reload" type="Sprite" parent="Control/retry"]
position = Vector2( 29, 32 )
scale = Vector2( 0.0625001, 0.0562501 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Control/retry"]
margin_left = 77.0
margin_top = 21.0
margin_right = 181.0
margin_bottom = 78.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "RETRY"

[node name="Next" type="TextureButton" parent="Control"]
margin_left = 808.0
margin_top = 511.0
margin_right = 999.0
margin_bottom = 567.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true

[node name="Home" type="Sprite" parent="Control/Next"]
position = Vector2( 30, 33 )
scale = Vector2( 0.050293, 0.050293 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Control/Next"]
margin_left = 78.0
margin_top = 22.0
margin_right = 182.0
margin_bottom = 79.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "NEXT"

[node name="UiFlatBanner02Upward" type="Sprite" parent="Control"]
position = Vector2( 124, 68 )
scale = Vector2( 2.75, 2.75 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Control"]
margin_left = 77.0
margin_top = 52.0
margin_right = 187.0
margin_bottom = 109.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "Stage  2
"

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="KeySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="DFA5" parent="." instance=ExtResource( 20 )]
position = Vector2( -53, 141 )
scale = Vector2( 0.5, 0.5 )

[connection signal="pressed" from="Control/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Control/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="Control/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_Next_pressed"]
